kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-web-app
  labels:
    app: react-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-web-app
  template:
    metadata:
      labels:
        app: react-web-app
    spec:
      containers:
        - name: web-app
          image: arshad0126/react-web-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
