kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-web-service
  labels:
    app: react-web-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: react-web-app
